feat: switch to ASCII-styled standard modules and improve configuration
- Replace custom ASCII scripts with standard Waybar modules using block character format-icons
- Add Bluetooth connectivity module
- Implement ASCII block character visualization for CPU, Memory, Battery, and Volume
- Add Temperature and Power Profiles Daemon modules (commented out)
- Update ASCII theme styling in style.css
- Restructure README with improved organization and Omarchy-specific commands
- Clean up unused custom scripts, keep only analog-clock.sh

--- a/config.jsonc
+++ b/config.jsonc
@@ -14,11 +14,13 @@
     "custom/voxtype",
     "custom/screenrecording-indicator",
     "group/tray-expander",
-    "custom/cpu-ascii",
-    "custom/memory-ascii",
     "network",
-    "custom/volume-ascii",
-    "custom/battery-ascii",
+    "pulseaudio",
+    "cpu",
+    "memory",
+    "battery",
+    // "temperature",
+    // "power-profiles-daemon",
     "custom/analog-clock",
     "clock",
   ],
@@ -69,15 +71,112 @@
   },
 
   "cpu": {
-    "format": "CPU:{usage}%",
+    "format": " CPU {icon} {usage}% ",
     "interval": 2,
     "on-click": "omarchy-launch-or-focus-tui btop",
+    "format-icons": [
+      "░░░░░░░░░░",
+      "█░░░░░░░░░",
+      "██░░░░░░░░",
+      "███░░░░░░░",
+      "████░░░░░░",
+      "█████░░░░░",
+      "██████░░░░",
+      "███████░░░",
+      "████████░░",
+      "█████████░",
+      "██████████",
+    ],
   },
 
   "memory": {
-    "format": "RAM:{percentage}%",
+    "format": "MEM {icon} {percentage}% ",
     "interval": 2,
     "on-click": "omarchy-launch-or-focus-tui btop",
+    "format-icons": [
+      "░░░░░░░░░░",
+      "█░░░░░░░░░",
+      "██░░░░░░░░",
+      "███░░░░░░░",
+      "████░░░░░░",
+      "█████░░░░░",
+      "██████░░░░",
+      "███████░░░",
+      "████████░░",
+      "█████████░",
+      "██████████",
+    ],
+  },
+
+  // "power-profiles-daemon": {
+  //   "format": "{icon}",
+  //   "tooltip-format": "{profile}",
+  //   "tooltip": true,
+  //   "format-icons": {
+  //     "performance": "󰓅",
+  //     "balanced": "󰾅",
+  //     "power-saver": "󰾆",
+  //   },
+  // },
+  // "temperature": {
+  //   "hwmon-path-abs": "/sys/devices/platform/coretemp.0/hwmon",
+  //   "input-filename": "temp1_input",
+  //   "critical-threshold": 85,
+  //   "format": " TEMP {icon} {temperatureC}°C",
+  //   "interval": 4,
+  //   "tooltip": true,
+  //   "tooltip-format": "CPU Temp:  {temperatureC}°C",
+  //   "format-icons": [
+  //     "░░░░░░░░░░",
+  //     "█░░░░░░░░░",
+  //     "██░░░░░░░░",
+  //     "███░░░░░░░",
+  //     "████░░░░░░",
+  //     "█████░░░░░",
+  //     "██████░░░░",
+  //     "███████░░░",
+  //     "████████░░",
+  //     "█████████░",
+  //     "██████████",
+  //   ],
+  //   "on-click": "omarchy-launch-or-focus-tui btop",
+  // },
+
+  "bluetooth": {
+    "format": "",
+    "format-off": "󰂲",
+    "format-disabled": "󰂲",
+    "format-connected": "󰂱",
+    "format-no-controller": "",
+    "tooltip-format": "Devices connected: {num_connections}",
+    "on-click": "omarchy-launch-bluetooth",
+  },
+  "pulseaudio": {
+    "format": "VOL {icon} {volume}%",
+    "on-click": "omarchy-launch-or-focus-tui wiremix",
+    "on-click-right": "pamixer -t",
+    "tooltip-format": "Playing at {volume}%",
+    "scroll-step": 5,
+    "format-muted": "  {icon} {volume}%",
+    "headphone": "  {icon} {volume}%",
+    "phone": "  {icon} {volume}%",
+    "phone-muted": "  {icon} {volume}%",
+    "portable": "  {icon} {volume}%",
+    "format-icons": {
+      "default": [
+        "░░░░░░░░░░",
+        "█░░░░░░░░░",
+        "██░░░░░░░░",
+        "███░░░░░░░",
+        "████░░░░░░",
+        "█████░░░░░",
+        "██████░░░░",
+        "███████░░░",
+        "████████░░",
+        "█████████░",
+        "██████████",
+      ],
+    },
   },
 
   "group/tray-expander": {
@@ -119,13 +218,6 @@
     "icon-size": 12,
     "spacing": 17,
   },
-  "custom/cpu-ascii": {
-    "exec": "~/.config/waybar/scripts/cpu-ascii.sh",
-    "return-type": "text",
-    "interval": 2,
-    "tooltip": "System CPU usage",
-    "on-click": "omarchy-launch-or-focus-tui btop",
-  },
 
   "custom/volume-ascii": {
     "exec": "~/.config/waybar/scripts/volume-ascii.sh",
@@ -138,19 +230,11 @@
     "on-scroll-down": "pactl set-sink-volume @DEFAULT_SINK@ -5%",
   },
 
-  "custom/memory-ascii": {
-    "exec": "~/.config/waybar/scripts/memory-ascii.sh",
-    "return-type": "text",
-    "interval": 2,
-    "tooltip": "System memory (RAM) usage",
-    "on-click": "omarchy-launch-or-focus-tui btop",
-  },
-
   "network": {
     "format-icons": ["░", "▂", "▄", "▅", "▇"],
     "format": "WIFI {icon}",
     "format-wifi": "WIFI {icon}",
-    "format-ethernet": "ETH ██",
+    "format-ethernet": "ETH ▓▓",
     "format-disconnected": "WIFI ░",
     "interval": 5,
     "tooltip-format-wifi": "{essid} ({frequency} GHz)\n⇣{bandwidthDownBytes}  ⇡{bandwidthUpBytes}",
@@ -158,13 +242,48 @@
     "tooltip-format-disconnected": "Disconnected",
     "on-click": "omarchy-launch-wifi",
   },
-
-  "custom/battery-ascii": {
-    "exec": "~/.config/waybar/scripts/battery-ascii.sh",
-    "return-type": "text",
+  "battery": {
+    "format": "BAT {icon} 󱈏 {capacity}%",
+    "format-discharging": "BAT {icon} {capacity}%",
+    "format-charging": "BAT {icon}  {capacity}%",
+    "format-plugged": "BAT {icon} 󱈏 {capacity}%",
+    "format-icons": {
+      "charging": [
+        "░░░░░░░░░░",
+        "█░░░░░░░░░",
+        "██░░░░░░░░",
+        "███░░░░░░░",
+        "████░░░░░░",
+        "█████░░░░░",
+        "██████░░░░",
+        "███████░░░",
+        "████████░░",
+        "█████████░",
+        "██████████",
+      ],
+      "default": [
+        "░░░░░░░░░░",
+        "█░░░░░░░░░",
+        "██░░░░░░░░",
+        "███░░░░░░░",
+        "████░░░░░░",
+        "█████░░░░░",
+        "██████░░░░",
+        "███████░░░",
+        "████████░░",
+        "█████████░",
+        "██████████",
+      ],
+    },
+    "format-full": "██████████ ",
+    "tooltip-format-discharging": "{power:>1.0f}W↓ {capacity}%",
+    "tooltip-format-charging": "{power:>1.0f}W↑ {capacity}%",
     "interval": 2,
-    "tooltip": "Battery status and charging information",
     "on-click": "omarchy-menu-tofi power",
+    "states": {
+      "warning": 20,
+      "critical": 10,
+    },
   },
 
   "custom/analog-clock": {
