--- a/config.jsonc
+++ b/config.jsonc
@@ -29,9 +29,19 @@
     "disable-scroll": false,
     "all-outputs": true,
     "on-click": "activate",
-    "format": "{name} {windows}",
-    "format-window-separator": " ",
-    "window-rewrite-default": "{}",
+    "format": "░{icon}░{windows}░",
+    "format-icons": {
+      "1": "I",
+      "2": "II",
+      "3": "III",
+      "4": "IV",
+      "5": "V",
+      "6": "VI",
+      "7": "VII",
+      "8": "VIII",
+      "9": "IX",
+      "10": "X",
+    },
     "workspace-taskbar": {
       "enable": true,
       "format": "{icon}",
@@ -40,10 +50,7 @@
     },
     "sort-by-number": true,
     "persistent-workspaces": {
-      // "1": [],
-      // "2": [],
-      // "3": [],
-      // "4": [],
+      "*": 5,
     },
   },
 
@@ -295,7 +302,7 @@
 
   "clock": {
     "format": "{:%I:%M %p}",
-    "format-alt": "󰸗 {:%a%e-%b %Y}",
+    "format-alt": "󰸗 {:%a %e-%b %Y}",
 
     "interval": 1,
     "tooltip-format": "{:%Y-%m-%d %A}\n{calendar}",
