--- a/config.jsonc
+++ b/config.jsonc
@@ -29,18 +29,23 @@
     "disable-scroll": false,
     "all-outputs": true,
     "on-click": "activate",
-    "format": "░{icon}░{windows}░",
+    "format": "{icon} {windows}",
     "format-icons": {
-      "1": "I",
-      "2": "II",
-      "3": "III",
-      "4": "IV",
-      "5": "V",
-      "6": "VI",
-      "7": "VII",
-      "8": "VIII",
-      "9": "IX",
-      "10": "X",
+      // dark:    ▒▒
+      // light:   ▒▒
+      // lighter: ░░
+      "default": "▓▓",
+      "1": "░░",
+      "2": "░░",
+      "3": "░░",
+      "4": "░░",
+      "5": "░░",
+      "6": "░░",
+      "7": "░░",
+      "8": "░░",
+      "9": "░░",
+      "10": "░░",
+      "active": "██",
     },
     "workspace-taskbar": {
       "enable": true,
